tests/invalid-string-constant/out.txt
error: invalid string constant
  ┌─ err.sml:1:9
  │
1 │ val _ = "bad \ bad \ bad"
  │         ^^^^^^^

lexing failed
